update gradle version, travis build and sonar reports