@@ -1,14 +1,13 @@
 plugins {
-    id 'org.springframework.boot' version '2.2.4.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
-    id 'idea'
-//    id 'jacoco'
+    id 'jacoco'
     id "org.sonarqube" version "2.8"
+    id 'org.springframework.boot' version '2.2.6.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 }
 
 group 'org.speech4j'
-version '1.0-SNAPSHOT'
+version '0.0.1-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
@@ -16,31 +15,17 @@ repositories {
     mavenCentral()
 }
 
-//jacoco {
-//    toolVersion = "0.8.5"
-//    reportsDir = file("$buildDir/customJacocoReportDir")
-//}
-
-//jacocoTestReport {
-//    reports {
-//        xml.enabled true
-//        csv.enabled true
-//        html.destination file("${buildDir}/jacocoHtml")
-//    }
-//}
-
-sonarqube {
-    properties {
-        property "sonar.projectKey", "speech4j_gateway"
-        property "sonar.organization", "speech4j"
-        property "sonar.sourceEncoding", "UTF-8"
-        property "sonar.login", "MrScors"
-        property "sonar.host.url", "https://sonarcloud.io"
+dependencyManagement {
+    imports {
+        mavenBom 'org.junit:junit-bom:5.6.0'
+        mavenBom 'org.testcontainers:testcontainers-bom:1.13.0'
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR3'
     }
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
@@ -48,4 +33,31 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "speech4j_api-gateway"
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        xml.destination file("${buildDir}/reports/jacoco/text.xml")
+        html.enabled false
+        csv.enabled false
+    }
+}
+
+project.tasks["sonarqube"].dependsOn "jacocoTestReport"
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+test {
+    jvmArgs(['--enable-preview'])
 }
